objects/ASI_MFM_AP_Code__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AP_Description_JP__c</fullName>
        <label>AP Description (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclusive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOC Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_AD__c</fullName>
        <formula>If(ISPICKVAL(ASI_MFM_A_C_Code__r.ASI_MFM_Reporting_Category__c,&apos;Sales Reduction&apos;),&apos;A&amp;D&apos;,&apos;A&amp;P&apos;)</formula>
        <label>A&amp;P/A&amp;D</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Category__c</fullName>
        <label>AP Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Category</fullName>
                </value>
                <value>
                    <fullName>MKT AP</fullName>
                </value>
                <value>
                    <fullName>DF AP</fullName>
                </value>
                <value>
                    <fullName>SA AP</fullName>
                </value>
                <value>
                    <fullName>AP Other Category</fullName>
                </value>
                <value>
                    <fullName>DP AP</fullName>
                </value>
                <value>
                    <fullName>ALL AP</fullName>
                </value>
                <value>
                    <fullName>All A&amp;P Total</fullName>
                </value>
                <value>
                    <fullName>Brand All POS Design fee</fullName>
                </value>
                <value>
                    <fullName>Brand Visibility</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Gift-set (CSK, LNY ) &amp; Off consumer PM</fullName>
                </value>
                <value>
                    <fullName>Hotel Promotion</fullName>
                </value>
                <value>
                    <fullName>Media Agency Fee</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Mentoring program</fullName>
                </value>
                <value>
                    <fullName>Model Cost</fullName>
                </value>
                <value>
                    <fullName>Other Agency fee</fullName>
                </value>
                <value>
                    <fullName>Media Production Cost</fullName>
                </value>
                <value>
                    <fullName>Other Consumer Activity</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Outdoor-Billboards</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PPL ( Products in placement )</fullName>
                </value>
                <value>
                    <fullName>PR Event &amp; Sponsorship</fullName>
                </value>
                <value>
                    <fullName>PR Retainer fee</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <label>AP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Description__c</fullName>
        <label>AP Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>AP External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Tree__c</fullName>
        <label>AP Tree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Code Tree</fullName>
                </value>
                <value>
                    <fullName>AP Code Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Type__c</fullName>
        <label>AP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Type</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other AP</fullName>
                </value>
                <value>
                    <fullName>On-premise</fullName>
                </value>
                <value>
                    <fullName>Off-Premise</fullName>
                </value>
                <value>
                    <fullName>Media DF</fullName>
                </value>
                <value>
                    <fullName>Other DF</fullName>
                </value>
                <value>
                    <fullName>Trade DF</fullName>
                </value>
                <value>
                    <fullName>Trade Other</fullName>
                </value>
                <value>
                    <fullName>Other Off SA</fullName>
                </value>
                <value>
                    <fullName>Other SA</fullName>
                </value>
                <value>
                    <fullName>Trade Off SA</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Trade Off</fullName>
                </value>
                <value>
                    <fullName>Off-Premise DF</fullName>
                </value>
                <value>
                    <fullName>Media AP</fullName>
                </value>
                <value>
                    <fullName>Trade AP</fullName>
                </value>
                <value>
                    <fullName>Consumer AP</fullName>
                </value>
                <value>
                    <fullName>AP Other</fullName>
                </value>
                <value>
                    <fullName>Trade On</fullName>
                </value>
                <value>
                    <fullName>Not analyzed</fullName>
                </value>
                <value>
                    <fullName>Service to Distributor (MKT)</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>PR Activity Other</fullName>
                </value>
                <value>
                    <fullName>A&amp;P Subtotal</fullName>
                </value>
                <value>
                    <fullName>Trade Other SA</fullName>
                </value>
                <value>
                    <fullName>Other On SA</fullName>
                </value>
                <value>
                    <fullName>Trade On SA</fullName>
                </value>
                <value>
                    <fullName>Other consumers AP expenses</fullName>
                </value>
                <value>
                    <fullName>Trade AP expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>AP Codes</relationshipLabel>
        <relationshipName>AP_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_P_Types__c</fullName>
        <formula>IF(OR(ISPICKVAL(ASI_MFM_AP_Type__c ,&apos;A&amp;D&apos;),ISPICKVAL(ASI_MFM_AP_Type__c ,&apos;Trade A&amp;P&apos;)) , &apos;Customer A&amp;P&apos;,IF(OR(ISPICKVAL(ASI_MFM_AP_Type__c ,&apos;Other A&amp;P&apos;),ISPICKVAL(ASI_MFM_AP_Type__c ,&apos;Media A&amp;P&apos;)),&apos;Consumer A&amp;P&apos;,&apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;P Types</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AnP_Type__c</fullName>
        <label>A&amp;P Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Bar/Room Styling</fullName>
                </value>
                <value>
                    <fullName>Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>Customized activation for contracted venue</fullName>
                </value>
                <value>
                    <fullName>High Value POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Attachments_for_PR__c</fullName>
        <label>Attachments for PR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Summary of the Bids</fullName>
                </value>
                <value>
                    <fullName>견적서</fullName>
                </value>
                <value>
                    <fullName>계약서</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Attachments_for_Payment_Request__c</fullName>
        <label>Attachments for Payment Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Attachments_for_Plan__c</fullName>
        <label>Attachments for Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>details of  Proposals</fullName>
                </value>
                <value>
                    <fullName>사진 (Optional)</fullName>
                </value>
                <value>
                    <fullName>Backup excel file</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Beneficiary_WS_Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beneficiary WS / Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Finance_Category__c</fullName>
        <label>Finance Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fixed_Variable__c</fullName>
        <label>Fixed/Variable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JP_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control for selection list of Plan&apos;s AP Code (MFM JP Only)</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ON_OFF__c</fullName>
        <label>ON/OFF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON/OFF</fullName>
                </value>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_OPEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PRPO_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR/PO Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PVA__c</fullName>
        <description>For KR Use</description>
        <label>PVA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Summary_Code__c</fullName>
        <label>Summary Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <description>The value is only allow:
PRADF 
PRJDF</description>
        <label>TR Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asi_mfm_sc_Need_Subleger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Subledger</label>
        <type>Checkbox</type>
    </fields>
    <label>AP Code</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_CRM_AP_Description_JP__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ASI_CRM_FOC_Invoice__c</columns>
        <columns>ASI_CRM_Attachment__c</columns>
        <columns>ASI_CRM_Exclusive_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_CRM_JP_AP_Code</value>
        </filters>
        <label>All JP CRM AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_HK_All_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_CAP_HK_AP_Code</value>
        </filters>
        <label>All CAP HK AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
            <group>ASI_MFM_CAP_TH_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_JP_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_CAP_JP_AP_Code</value>
        </filters>
        <label>CAP JP AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_OTH_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_OPEX__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_CAP_OTH_AP_Code</value>
        </filters>
        <label>All CAP Other AP Code</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_SG_All_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_CAP_SG_AP_Code</value>
        </filters>
        <label>All CAP SG AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_TH_All_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_CAP_TH_AP_Code</value>
        </filters>
        <label>All CAP TH AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TH_Finance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_KR_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_PRPO_Needed__c</columns>
        <columns>ASI_MFM_Beneficiary_WS_Venue__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_External_ID__c</columns>
        <columns>ASI_MFM_AnP_Type__c</columns>
        <columns>ASI_MFM_ON_OFF__c</columns>
        <columns>ASI_MFM_PVA__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_KR_AP_Code</value>
        </filters>
        <label>KR AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
            <group>ASI_KOR_CSD_MOT_Venue</group>
            <group>ASI_KOR_CSD_Metro_WS</group>
            <group>ASI_KOR_CSD_Outside_Metro_WS_TOT</group>
            <group>ASI_KOR_CSD_TOT_Venue</group>
            <group>ASI_KOR_Channel_Sales_Drs_TM_Off_Trade</group>
            <group>ASI_KOR_IT_Admin</group>
            <group>ASI_KOR_Sales_Director_MD_Management</group>
            <group>ASI_KOR_Sales_Director_MOT_Venue</group>
            <group>ASI_KOR_Sales_Director_Metro_WS</group>
            <group>ASI_KOR_Sales_Director_TOT_Venue</group>
            <group>ASI_KOR_Sales_Director_WS</group>
            <group>ASI_KOR_Sales_Team_CVS_Dept_Stores</group>
            <group>ASI_KOR_Sales_Team_Hyper</group>
            <group>ASI_KOR_Sales_Team_MD_Management</group>
            <group>ASI_KOR_Sales_Team_MOT_Choongcheong_Ho</group>
            <group>ASI_KOR_Sales_Team_MOT_Metro_Spirits</group>
            <group>ASI_KOR_Sales_Team_MOT_Metro_Whisky</group>
            <group>ASI_KOR_Sales_Team_MOT_Venue_CTR_YN</group>
            <group>ASI_KOR_Sales_Team_MOT_Venue_Spirit</group>
            <group>ASI_KOR_Sales_Team_MOT_Venue_Whisky</group>
            <group>ASI_KOR_Sales_Team_MOT_Youngnam</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_KG_KW</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Kyunggi_N</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Kyunggi_S</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Seoul</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Seoul_N</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Seoul_S</group>
            <group>ASI_KOR_Sales_Team_NCD_Team</group>
            <group>ASI_KOR_Sales_Team_OFF_Trade</group>
            <group>ASI_KOR_Sales_Team_Speciality_Channel</group>
            <group>ASI_KOR_Sales_Team_TOT_Busan_Kyungnam</group>
            <group>ASI_KOR_Sales_Team_TOT_Kyunggi</group>
            <group>ASI_KOR_Sales_Team_TOT_Seoul</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_CC_Honam</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_KG_KW</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_Seoul</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_Yongnam</group>
            <group>ASI_KOR_Sales_Team_WS_Busan_Ulsan</group>
            <group>ASI_KOR_Sales_Team_WS_CC_HN</group>
            <group>ASI_KOR_Sales_Team_WS_Jeju</group>
            <group>ASI_KOR_Sales_Team_WS_KB_KN</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Busan_Kyungn</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Choongcheong</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Honam</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Jeju</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Kyungbuk</group>
            <roleAndSubordinates>ASI_JP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_PH_DF_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_PH_DF_AP_Code</value>
        </filters>
        <label>PH DF AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_PH_DF_Power_User</group>
            <group>ASI_MFM_PH_DF_Standard_User</group>
            <group>ASI_MFM_PH_DP_Power_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_PH_DP_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_PH_DP_AP_Code</value>
        </filters>
        <label>PH DP AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_PH_DF_Power_User</group>
            <group>ASI_MFM_PH_DP_Power_User</group>
            <group>ASI_MFM_PH_DP_Standard_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_SG_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_SG_Code,ASI_MFM_AP_Code__c.ASI_MFM_SG_DF_AP_Code,ASI_MFM_AP_Code__c.ASI_MFM_SG_DP_AP_Code</value>
        </filters>
        <label>SG AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_MFM_PH_DF_Power_User</group>
            <group>ASI_MFM_PH_DF_Standard_User</group>
            <group>ASI_MFM_PH_DP_Power_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_SG_AP_Code2</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_PRPO_Needed__c</columns>
        <columns>ASI_MFM_Beneficiary_WS_Venue__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_External_ID__c</columns>
        <columns>ASI_MFM_AnP_Type__c</columns>
        <columns>ASI_MFM_ON_OFF__c</columns>
        <columns>ASI_MFM_PVA__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_SG_Code</value>
        </filters>
        <label>SG AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
            <group>ASI_KOR_CSD_MOT_Venue</group>
            <group>ASI_KOR_CSD_Metro_WS</group>
            <group>ASI_KOR_CSD_Outside_Metro_WS_TOT</group>
            <group>ASI_KOR_CSD_TOT_Venue</group>
            <group>ASI_KOR_Channel_Sales_Drs_TM_Off_Trade</group>
            <group>ASI_KOR_IT_Admin</group>
            <group>ASI_KOR_Sales_Director_MD_Management</group>
            <group>ASI_KOR_Sales_Director_MOT_Venue</group>
            <group>ASI_KOR_Sales_Director_Metro_WS</group>
            <group>ASI_KOR_Sales_Director_TOT_Venue</group>
            <group>ASI_KOR_Sales_Director_WS</group>
            <group>ASI_KOR_Sales_Team_CVS_Dept_Stores</group>
            <group>ASI_KOR_Sales_Team_Hyper</group>
            <group>ASI_KOR_Sales_Team_MD_Management</group>
            <group>ASI_KOR_Sales_Team_MOT_Choongcheong_Ho</group>
            <group>ASI_KOR_Sales_Team_MOT_Metro_Spirits</group>
            <group>ASI_KOR_Sales_Team_MOT_Metro_Whisky</group>
            <group>ASI_KOR_Sales_Team_MOT_Venue_CTR_YN</group>
            <group>ASI_KOR_Sales_Team_MOT_Venue_Spirit</group>
            <group>ASI_KOR_Sales_Team_MOT_Venue_Whisky</group>
            <group>ASI_KOR_Sales_Team_MOT_Youngnam</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_KG_KW</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Kyunggi_N</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Kyunggi_S</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Seoul</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Seoul_N</group>
            <group>ASI_KOR_Sales_Team_Metro_WS_Seoul_S</group>
            <group>ASI_KOR_Sales_Team_NCD_Team</group>
            <group>ASI_KOR_Sales_Team_OFF_Trade</group>
            <group>ASI_KOR_Sales_Team_Speciality_Channel</group>
            <group>ASI_KOR_Sales_Team_TOT_Busan_Kyungnam</group>
            <group>ASI_KOR_Sales_Team_TOT_Kyunggi</group>
            <group>ASI_KOR_Sales_Team_TOT_Seoul</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_CC_Honam</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_KG_KW</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_Seoul</group>
            <group>ASI_KOR_Sales_Team_TOT_Venue_Yongnam</group>
            <group>ASI_KOR_Sales_Team_WS_Busan_Ulsan</group>
            <group>ASI_KOR_Sales_Team_WS_CC_HN</group>
            <group>ASI_KOR_Sales_Team_WS_Jeju</group>
            <group>ASI_KOR_Sales_Team_WS_KB_KN</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Busan_Kyungn</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Choongcheong</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Honam</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Jeju</group>
            <group>ASI_KOR_Sales_Team_WS_TOT_Kyungbuk</group>
            <roleAndSubordinates>ASI_JP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATR_AP_Code</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Tree__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_TR_AP_Code</value>
        </filters>
        <label>ATR AP Code</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Pernod_Ricard_Asia_Duty_Free</roleAndSubordinates>
            <roleAndSubordinates>ASI_JP_Duty_Free_Team</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Tree__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>ASI_MFM_AP_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAPEX_AP_Code_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_A_C_Code__c</columns>
        <columns>ASI_MFM_AP_Code__c</columns>
        <columns>ASI_MFM_AP_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_OPEX__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_AP_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_AP_Code__c.ASI_MFM_CAP_AP_Code</value>
        </filters>
        <filters>
            <field>ASI_MFM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_MFM_OPEX__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CAPEX AP Code - Active</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_Regional_IT</group>
            <group>ASI_MFM_CAP_SSC_Finance_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>